# pms

./: .eslintrc  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Linked resources.mdown  Procfile  README.md  build-docker-context.sh  docker-compose.yaml  docker-compose.yml  flows.md  members.json  mock.yml  package.json  prod.Dockerfile  run_postgres.sh  swagger.yaml
api-testing/: package.json  test.js
api-testing/config/: database.yml
backend/: Cargo.toml  Dockerfile  autobuild.sh  create.sql  db-logic.sql  index.php  mock.sql  run_backend.sh
backend-rocket/: Cargo.toml  Rocket.toml
backend-rocket/src/: db.rs  main.rs
backend/src/: main.rs
database/: Dockerfile  create.sql  db-init.sh  db-logic.sql  mock.sql  run_postgres.sh
database/docker/: initialize-pms.sh
database/email_worker/: .env.template  Cargo.toml
database/email_worker/src/: main.rs
database/email_worker/templates/: password_reset.mustache  test.mustache
frontend/: .babelrc  .eslintrc  Dockerfile  api.yaml  devServer.js  gulpfile.js  http.js  index.html  index.jsx  lib.js  login.html  members.json  memberstub.js  package.json  react.html  router.js  style.css  styles.css  table.html  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
frontend/app/: api.jsx  app.jsx  app.less  auth.jsx  combineImmutableReducers.jsx  configureStore.jsx  constants.jsx  editPopup.jsx  form.json  formField.jsx  index.html  index.jsx  manifest.appcache  memberCreate.jsx  memberEdit.jsx  membersList.jsx  rolesEdit.jsx  routes.jsx  schema.jsx  service-worker.js
frontend/app/actions/: auth.jsx  fields.jsx  groups.jsx  index.jsx  members.jsx  people.jsx  permissions.jsx
frontend/app/components/: app.jsx  auth.jsx  chip.jsx  devTools.jsx  field.jsx  headerBar.jsx  index.jsx  itemEdit.jsx  list.jsx  listView.jsx
frontend/app/containers/: app.jsx  auth.jsx  headerBar.jsx  index.jsx  login.jsx
frontend/app/fields/: schema.json  view.jsx
frontend/app/group/: edit.jsx  schema.json  stub.json  view.jsx
frontend/app/member/: edit.jsx  schema.json  view.jsx
frontend/app/permissions/: table.jsx
frontend/app/reducers/: auth.jsx  count.jsx  fields.jsx  fields.state.json  groups.jsx  index.jsx  members.jsx  people.jsx  permissions.jsx  permissions.state.json  routing.jsx
frontend/app/redux/: apiMiddleware.jsx  apiWrapper.jsx  configureStore.jsx
frontend/app/resources/: baseResource.jsx  fields.jsx  index.jsx  people.jsx  roles.jsx  util.jsx
frontend/app/view/: field.jsx  itemEdit.jsx  list.jsx
mocker/: Cargo.toml
mocker/src/: main.rs
nginx/: pms.nginx.conf  run_nginx.sh
python/: requirements.txt  server.py
test/: test.spec.js  tlds.txt
(+60 files in other folders)
