[package]
name = "backend"
version = "0.1.0"
authors = ["dexter <dexter@dexterlabs.nl>", "Benjamin W. Broersma <bw@broersma.com>"]

[dependencies]
bodyparser = "*"
iron = "*"
persistent = "*"
postgres = { version = "*", features = ["serde_json", "unix_socket"]}
postgres_macros = "*"
router = "*"
rust-crypto = "*"
rustc-serialize = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"

[dependencies.iron-postgres-middleware]
git = "https://github.com/neoel/iron-postgres-middleware.git"
