[package]
name = "backend"
version = "0.1.0"
authors = ["dexter <dexter@dexterlabs.nl>", "Benjamin W. Broersma <bw@broersma.com>"]
publish = false

[dependencies]
bodyparser = "*"
iron = "*"
iron-postgres-middleware = { git = "https://github.com/wolbodo/iron-postgres-middleware" }
persistent = "*"
postgres = { version = "*", features = ["with-serde_json"]}
postgres_macros = { git = "https://github.com/wolbodo/rust-postgres-macros" }
router = "*"
rust-crypto = "*"
rustc-serialize = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
