[package]
name = "backend"
version = "0.1.0"
authors = ["dexter <dexter@dexterlabs.nl>", "Benjamin W. Broersma <bw@broersma.com>"]
publish = false

[dependencies]
bodyparser = "0.4.1"
iron = "0.4.0"
iron-postgres-middleware = { git = "https://github.com/martinsp/iron-postgres-middleware" }
persistent = "0.2.1"
postgres = { version = "0.13.4", features = ["with-serde_json"]}
postgres_macros = { git = "https://github.com/sfackler/rust-postgres-macros" }
router = "0.4.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.22"
serde = "0.8.20"
serde_json = "*"
serde_derive = "0.8.20"
