[package]
name = "email_worker"
version = "0.0.2"
authors = ["dexter <dexter@dexterlabs.nl>", "Benjamin W. Broersma <bw@broersma.com>"]
publish = false

[dependencies]
postgres = { version = "*", features = ["with-serde_json"]}
postgres_macros = "*"
fallible-iterator = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
chan = "*"
chan-signal = "*"
mustache = "*"
lettre = "*"
dotenv = "*"